:sparkles: [FEAT] 배틀룸 삭제 API
